Colour social and footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,8 +23,8 @@
     --color-1-light  : hsla(182, 82%, 48%, 1);
     --color-1-dark   : hsla(182, 82%, 28%, 1);
     --color-1-darker : hsla(182, 82%, 18%, 1);
-    --color-2-lighter: hsla(24, 100%, 67%, 1);
-    --color-2-light  : hsla(24, 100%, 57%, 1);
+    --color-2-lighter: rgb(146, 53, 174);
+    --color-2-light  : rgb(194, 90, 208);
     --color-2-dark   : hsla(24, 100%, 37%, 1);
     --color-2-darker : hsla(24, 100%, 27%, 1);
 
