--- a/css/project.css
+++ b/css/project.css
@@ -3,9 +3,9 @@ body{
 }
 
 .p-title{
-    display: block;
- text-align: center;
- font-family: Arial, Helvetica, sans-serif;
+    width: 50%;
+    margin: auto;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .p-title  h3{
@@ -22,8 +22,13 @@ body{
     align-items:center;
     height: auto;
     margin: auto;
+    display: flex;
+    justify-content: center;
 }
 .head-title h2 h3{
+    width: 50%;
+    margin: auto;
+    justify-content: center;
     text-align: center;
 }
 
@@ -52,6 +57,12 @@ body{
 
 .image-block{
     margin-bottom: 5rem;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    width: 60%;
+
 }
 
 .image-block img{
@@ -79,8 +90,8 @@ body{
     }
 
     .project-block {
-        margin-left: 9rem;
-        margin-right: 0;
+        margin-left: auto;
+        margin-right: auto;
        
     }
 
@@ -88,8 +99,18 @@ body{
         width: 80%;
         text-align: justify;
     }
+    .image-block{
+        width: 80%;
+        margin: auto;
+        display:flex;
+        justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+
+    }
    
 }
+
 
 
 
