--- a/css/project.css
+++ b/css/project.css
@@ -24,6 +24,8 @@ body{
     margin: auto;
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
+    text-align: justify;
 }
 .head-title h2 h3{
     width: 50%;
