--- a/css/project.css
+++ b/css/project.css
@@ -8,6 +8,10 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
+h1{
+    font-size: 5rem;
+}
+
 .p-title  h3{
     font-size: 3rem;
 }
@@ -18,19 +22,14 @@ body{
 }
 
 .head-title{
-    width: 50%;
-    align-items:center;
-    height: auto;
+    width: 60%;
     margin: auto;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    text-align: justify;
+    text-align: center;
+
 }
-.head-title h2 h3{
+.head-title h2 h3 h5{
     width: 50%;
     margin: auto;
-    justify-content: center;
     text-align: center;
 }
 
@@ -47,6 +46,7 @@ body{
     justify-content: center;
     height: auto;
     margin-left: auto;
+    margin-top: 1rem;
    
 }
 .project-block h2 h5{
@@ -54,7 +54,7 @@ body{
    align-items: center;
 }
 .project-block p{
-    width: 60%;
+    width: 100%;
 }
 
 .image-block{
@@ -63,7 +63,7 @@ body{
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    width: 60%;
+    width: 80%;
 
 }
 
@@ -71,7 +71,7 @@ body{
     margin-top: 8px;
     margin-left: 8px;
     vertical-align: middle;
-    max-width: 250px;
+    max-width: 300px;
     height: auto;
 }
 
